# gradle-dependency-health-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  conference_loading_test.json  test_loading.json  test_silent.json
docs/: CHANGELOG.md  CRATES.md  README.md  advanced-usage.md  json-output.md  supported-formats.md
src/: analyzer.rs  bundle_analyzer.rs  cli.rs  config.rs  display.rs  error.rs  lib.rs  loading.rs  main.rs  parser.rs  version_catalog.rs
test-samples/: build.gradle
test-samples/app/: build.gradle
test-samples/feature1/: build.gradle
test-samples/feature2/: build.gradle
test-samples/gradle/: libs.versions.toml
test-samples/lib/: build.gradle.kts
test-samples/mixed/: build.gradle.kts  libs.versions.toml
test-samples/mixed/lib/: build.gradle.kts
test-samples/module1/: build.gradle
test-samples/module2/: build.gradle.kts
test-samples/module3/: build.gradle
test-samples/multiplatform/: build.gradle.kts
test-samples/project-deps/: build.gradle.kts
test-samples/project-deps/lib/: build.gradle
test-samples/real-project/: build.gradle.kts  libs.versions.toml
test-samples/version-conflicts/app/: build.gradle
test-samples/version-conflicts/core/: build.gradle
test-samples/version-conflicts/lib/: build.gradle
tests/: analyzer_tests.rs  cli_tests.rs  integration_tests.rs  parser_tests.rs  plugin_tests.rs  version_catalog_tests.rs
tests/common/: mod.rs
