[package]
name = "gradle-dependency-health-checker"
version = "0.2.0"
edition = "2021"
authors = ["ParkJong-Hun thesn515@gmail.com"]
description = "A powerful tool to detect duplicate dependencies, version conflicts, duplicate plugins, and recommend dependency bundles in Gradle projects"
readme = "README.md"
homepage = "https://github.com/ParkJong-Hun/gradle-dependency-health-checker"
repository = "https://github.com/ParkJong-Hun/gradle-dependency-health-checker"
license = "MIT"
keywords = ["gradle", "dependency", "build-tools", "analysis", "plugins"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
regex = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
